<?xml version="1.0"?>
<package format="2">
        <name>mvs_texturing</name>
        <version>0.0.1</version>
        <description>The mvs_texturing package</description>
        <maintainer email="manhha.hoang@neura-robotics.com">Manh Ha Hoang</maintainer>
        <author email="manhha.hoang@neura-robotics.com">Manh Ha Hoang</author>
        <license>NEURA Robotics</license>
        <buildtool_depend>catkin</buildtool_depend>
        <depend>roscpp</depend>
        <depend>roslib</depend>
        <depend>neura_vision_tools_msgs</depend>
        <export>

        </export>
</package>
